# pokemon-resources

./: README.md  pogo_cm.json  pogo_pkm.json  pogo_pkm_manual.json  pokemon_names.json  pyproject.toml  update_data.py  update_pogo_data.py
.github/workflows/: update_graphics.yml  update_miner.yml
graphics/: update_pogo_graphics.py
