[project]
name = "pokemon-resources"
version = "0.1.0"
description = "Pokemon go resources, automatically updated via pokeminers "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "config>=0.5.1",
    "fire>=0.7.0",
    "lxml>=5.3.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "streamlit-aggrid>=1.1.0",
    "streamlit-keyup>=0.3.0",
]
